# ISO_AUC_curves_deploy

./: .gitignore  GEMINI.md  pyproject.toml
apps/: AUC_curves.py  AUC_thres.py  Function_behaviour.py  k_optim.py  manhattan_vs_auc.py
apps/public/: df_plotter.csv  df_plotter_astm_auc.csv  df_plotter_astm_auc_var.csv
notebooks/: AUC_curves.py
